overlay z-index fix

--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_stars-marketplaces.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_stars-marketplaces.scss
@@ -64,7 +64,6 @@
       position: relative;
       align-items: center;
       height: rem(400);
-      z-index: 2;
     }
 
     &__card {
@@ -82,7 +81,6 @@
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
-      z-index: 1;
     }
   }
 }
